--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     </head>
     <body>
         <div class="header">
-            Welcome welcome, choose a dog breed.
+            Chat room
         </div>
-        <div id="buttons"></div>
-        <img id="dog">
         <div id="comments">
             <div id="signupDiv" style="display:none">
                 Register to add a comment:
