--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <div class="header">
             Chat room
         </div>
+        <div id="buttons"></div>
         <div id="comments">
             <div id="signupDiv" style="display:none">
                 Register to add a comment:
