--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     </head>
     <body>
         <div class="header">
-            Chat room
+            Welcome welcome, choose a dog breed.
         </div>
         <div id="buttons"></div>
+        <img id="dog">
         <div id="comments">
             <div id="signupDiv" style="display:none">
                 Register to add a comment:
