--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="header">
-            Welcome welcome, choose a dog breed.
+            Chat room
         </div>
         <div id="buttons"></div>
         <img id="dog">
@@ -15,7 +15,6 @@
                 Register to add a comment:
                 <br>
                 Email: <input id="emailReg">
-                Username:<input id="userReg">
                 Password: <input type="password" id="passwordReg">
                 <button id="registerBtn">Register</button>
                 <br>
