--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 Register to add a comment:
                 <br>
                 Email: <input id="emailReg">
+                Username: <input id="userReg">
                 Password: <input type="password" id="passwordReg">
                 <button id="registerBtn">Register</button>
                 <br>
