--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
         <div class="header">
             Chat room
         </div>
-        <div id="buttons"></div>
-        <img id="dog">
         <div id="comments">
             <div id="signupDiv" style="display:none">
                 Register to add a comment:
@@ -37,6 +35,9 @@
                 <a id="slattbratha">Click here to log out.</a>
             </div>
             <div class="error"></div>
+            <div id="editButtonDiv" style="display: none">
+                <button id="edits"></button>
+            </div>
         </div>
     </body>
 </html>
