--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="header">
-            Chat room
+            Lake Chat
         </div>
         <div id="comments">
             <div id="signupDiv" style="display:none">
